# old_pygame_helper

./: LICENSE.txt  README.md  classes.py  events.py  helper.py  pyproject.toml  setup.cfg  sprites.py  test.py
old_dist/: pygame_helper-1.0.0-py3-none-any.whl  pygame_helper-1.0.1-py3-none-any.whl
src/pygame_helper/: classes.py  events.py  graphics.py  helper.py  saving.py  sprites.py
src/pygame_helper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
