[metadata]
name = pygame-helper
version = 1.0.1
author = Damus666
author_email = macchia.cuordileone@gmail.com
description = Helper functions and classes to code in pygame
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Damus666/pygame_helper
project_urls =
    Bug Tracker = https://github.com/Damus666/pygame_helper/issues
    repository = https://github.com/Damus666/pygame_helper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6.9

[options.packages.find]
where = src